# CubicVR-2

./: CMakeCommon.txt  CMakeLists.txt  README.md
CubicVR2.xcodeproj/: project.pbxproj
CubicVR2Test/: CubicVR_Core.fs  CubicVR_Core.vs  CubicVR_TestShader.vert  MathTest.h  MeshTest.cpp  MeshTest.h  ShaderRenderTest.cpp  ShaderRenderTest.h  ShaderTest.cpp  ShaderTest.h  main.cpp
cmake_build/: .cproject  .project
include/core/: Camera.h  Light.h  Mesh.h
include/cubicvr2/: utility.h
include/cubicvr2/core/: Camera.h  Light.h  Mesh.h  Timer.h
include/cubicvr2/math/: mat3.h  mat4.h  types.h  vec2.h  vec3.h  vec4.h
include/cubicvr2/opengl/: CoreShader.h  Renderer.h  Shader.h  Texture.h  opengl_support.h
include/opengl/: CoreShader.h  Shader.h
source/core/: BitSet.cpp  BitSet.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Timer.cpp
source/image/: lodepng.cpp
source/math/: cubic_math.cpp  frustum.h  transform.h  vec3.h
source/opengl/: CoreShader.cpp  CoreShader.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  opengl_support.cpp  opengl_support.h
test/: CMakeLists.txt  CubicVR_TestShader.frag  MathTest.cpp  MathTest.h  MeshTest.h  ShaderRenderTest.h  ShaderTest.h  main.cpp
